syntax = "proto3";

option go_package = "github.ibm.com/alchemy-containers/armada-storage-secret/secretprovider";
option java_multiple_files = true;
option java_package = "io.grpc.ibm.storage-secret";
option java_outer_classname = "StorageSecretClass";

package secretprovider;

// The IAMTokenProvider.
service IAMTokenProvider {
  // Get IAM token
  rpc GetIAMToken(Request) returns (IAMToken) {}

  rpc GetDefaultIAMToken(Request) returns (IAMToken) {}

}

// The request message containing the Request.
message Request {
  string profileId = 1;
  bool 	isFreshTokenRequired = 2;
}

// The response message containing IAMToken
message IAMToken {
  string iamtoken = 1;
  uint64 tokenlifetime = 2;
}

